# AbstractSpaceShip

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  shell.nix
docs/: bibliography.bib  build.sh  docs.md  shell.nix
scripts/: build.sh
src/: background_shader.vert  flames_shader.frag  flames_shader.vert  load_shaders.cpp  load_shaders.hpp  main.cpp  spaceship_shader.frag  spaceship_shader.vert
